<resources>
    <string name="app_name">Fitness App</string>
    <string name="logo">logo</string>
    <string name="appName">Fitness App</string>
    <string name="email_text">Enter your email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="proceed">Proceed</string>
    <string name="backgroundchanger">backgroundChanger</string>
    <string name="tooltip">Please enter a valid email</string>
    <string name="tooltip_email">tooltip_email</string>
    <string name="chest_button">Chest</string>
    <string name="back_button">Back</string>
    <string name="arms_button">Arms</string>
    <string name="abs_button">Abs</string>
    <string name="shoulder_button">Shoulder</string>
    <string name="legs_button">Legs</string>
    <string name="proceed_button">Proceed</string>
    <string name="chest_three_description"> Lie back on an incline bench. Make sure the bench is adjusted to between 15 and 30 degrees on an incline.
        Anything higher than 30 degrees mainly works the anterior deltoids (shoulders). Your grip should be where your elbows make a 90-degree angle.
        \nUsing a shoulder-width grip, wrap your fingers around the bar with your palms facing away from you.
        Lift the bar up from the rack and hold it straight over you with your arms locked.
        As you breathe in, come down slowly until the bar is an inch away from your chest.
        \nYou want the bar to be in line with your upper chest the whole time. Your arms should be at a 45-degree angle and tucked into your sides.
        Hold this position for one count at the bottom of this movement and, with one big exhale, push the bar back up to your starting position.
        Lock your arms, hold, and come down slowly.
        \nDo 12 repetitions and then place the bar back on the rack.
        Complete a total of five sets, adding weight after each set.</string>
    <string name="chest_four_description"> Set both pulleys directly at (or slightly above) shoulder height and select the desired weight.
        Grasp both handles with a neutral grip and take a step forward to split the stance.
        Press the handles to lockout while flexing the pecs and extending the elbows.
        Keep a slight bend in the elbows, move entirely at the shoulder joint, and slowly allow the arms to open while the pecs stretch.
        Return to the starting position by flexing your pecs and bringing the handles together at chest height.
        Slowly lower back to the starting position and repeat for the desired number of repetitions.</string>
    <string name="chest_two_description">
        Lie flat on a bench and set your hands just outside of shoulder width.
        Set your shoulder blades by pinching them together and driving them into the bench.
        \nTake a deep breath and allow your spotter to help you with the lift off in order to maintain tightness through your upper back.
        Let the weight settle and ensure your upper back remains tight after lift off.
        \nInhale and allow the bar to descend slowly by unlocking the elbows.
        Lower the bar in a straight line to the base of the sternum (breastbone) and touch the chest.
        \nPush the bar back up in a straight line by pressing yourself into the bench,
        driving your feet into the floor for leg drive,
        and extending the elbows.Repeat for the desired number of repetitions </string>
    <string name="chest_one_description">Stand in front of your box or bench, then squat or bend down and
        place both hands on either side of it with your fingers pointing forward.Your hands should be about shoulder-width apart.
        If you need a wider piece of equipment to safely elevate yourself, don’t be shy about swapping it out.\n
        Once your hands are in the right position, step your body back into a plank position, one leg at a time.
        Make sure your body is in a straight line, your head is aligned with your spine, and that your lower back isn’t sagging before continuing.
        Looking a few inches ahead of you, rather than down at the box, can help keep your body straight.
        \nNext, bend your arms to help you slowly lower your chest toward the box. Straighten your arms to bring yourself back up into a straight line.
        Repeat 10 times for 3 sets to start. You can increase the repetitions within each set as you get stronger.</string>
    <string name="about">About</string>
    <string name="hello_blank_fragment">About</string>
    <string name="leg_one_description">Start with your feet slightly wider than hip-width apart.
Keep your chest up, engage your abdominals, and shift your weight onto your heels as you push your hips back into a sitting position.
Lower your hips until your thighs are parallel or almost parallel to the floor.
You should feel the squat in your thighs and glutes.
Pause with your knees over, but not beyond, your toes.
Exhale and push back up to the starting position.</string>
    <string name="leg_two_description">Stand upright holding two dumbbells by your sides. Place the balls of your feet on an exercise step or weight plate with your heels touching the floor. With your toes pointing forwards, raise your heels off the floor and contract your calves. Slowly return to the starting position.</string>
    <string name="leg_three_description">Stand upright with dumbbells at your side, palms facing your body. Lunge forward as far as you can with your right leg, bending your trailing knee so it almost brushes the floor. Use the heel of your right foot to push your upper body back to the starting position. Repeat with the opposite leg.</string>
    <string name="leg_four_description">Start by standing on your right foot. Lift your left leg out and hold it out straight and slightly in front of your torso. You could also just bend your knee and keep your left leg elevated to start. Your arms can be by your side or out in front of you for balance.
Keep your core engaged and your torso up throughout the movement. Start to push your hips back as you lower into a squat position. Aim to get low enough that your hips are parallel to the ground.
Squeeze your glutes as you push into the right foot to stand back up. Try to keep your left leg up between reps.</string>
    <string name="arms_one_description">Place one dumbbell in each hand. Rotate the hands so that the palms face the thighs. By doing so, you\'ll notice that the thumbs face forward.
Keeping the elbows in a fixed position, flex (bend) at the elbow so the lower arms lift up and toward the shoulders. Keep the shoulders relaxed as you work. Keep your grip firms and wrists in line with the forearm.
At the top of the movement, thumbs will be close to the shoulders, palms facing in toward the midline of the body.
Lower the weights to the starting position.</string>
    <string name="arms_two_description">Stand tall with your chest up and core braced, holding the barbell with your hands just outside of your hips, using an underhand grip. Keeping your chest up and your elbows tight to your sides, initiate the move by raising your hands slightly so you feel your biceps become engaged. While maintaining tension on your biceps, curl the bar up to shoulder height, then give your biceps a one-second squeeze. Start to lower the bar slowly, keeping your biceps tensed and engaged to work as many muscle fibres as possible.</string>
    <string name="arms_three_description">Bring the dumbbells up and back and straighten your arms. Keeping one arm straight, return to the starting position with the other arm and perform a kickback. Then, keep that arm in a fixed position and a perform a kickback with the other arm. Keep alternating arms and repeat this motion</string>
    <string name="arms_four_description">Grab a pair of dumbbells and stand tall with your feet shoulder-width apart. Brace your core—as if you’re about to get punched in the gut—and squeeze your glutes. Maintain these contractions the entire exercise.

Press the weights over head until your arms are straight and your biceps are next to your ears. Your palms should face each other. This is the starting position.

Without moving your upper arms, bend your elbows to lower the weights behind your head until your forearms are at least parallel to the floor. Pause, then straighten your arms to return to the starting position.</string>
    <string name="shoulder_four_description">Stand with feet about shoulder-width apart. Keep the back straight and feet planted flat on the floor. Your arms holding weights should hang down.
Hold the dumbbells across the thighs horizontally, palms facing back toward the thighs. Ensure that you have a firm grip.
Brace the abdominal muscles.
Lift the weights upward, inhaling, with arms out in front and palms facing down. Keep a slight bend in the elbows to reduce the stress on the joints. Pause when the arms are approximately horizontal to the floor and feel the contraction in the shoulders.
Return the dumbbells to the starting position at the thighs with a slow and controlled motion while exhaling.
Repeat the exercise for the number of sets and repetitions in your program.

</string>
    <string name="shoulder_three_description">Grasp a barbell or dumbbells and allow it to hang in front of you at the length of your arms. Your palms should be facing your body.
Standing up straight, adjust your grip so that your hands are about in line with the thighs. Shoulder-width apart (no closer) is recommended for wrist and shoulder safety.
Breathe in and brace the abdominals, keep the back straight, chest up, and eyes focused forward.
Lift the barbell straight up toward the chin, leading with the elbows and keeping the bar close to the body. Breathe out during the effort. Your arms should go no higher than parallel with the shoulders. Slightly less is OK.
Pause at the top of the lift.
Return the barbell back to the starting position, breathing in as you lower it.
Repeat the move for your defined number of repetitions.</string>
    <string name="shoulder_two_description">Place the barbell in a barbell rack at an appropriate height. When you walk up to the barbell, it should be in front of your shoulders—you should be able to take it off of the rack without standing on your tip-toes or bending down too low.
Start by standing with your feet about shoulder-width apart. Your hips should be fully extended, as should your knees, but be careful not to lock your knees. Hold the barbell in a front-rack position (resting on the front of your shoulders), with your elbows pointing forward.
Breathe, tighten your core, and press the barbell overhead. Press until your arms are fully locked out. Press your head through the “window” made by your arms.
Engage your back muscles and with control, lower the barbell back to the front rack position.
Repeat for eight to 10 reps. If you need to make an adjustment, place the barbell back on the rack.</string>
    <string name="shoulder_one_description">Stand tall, a dumbbell in each hand. Arms are at your sides, palms facing in. Position your feet roughly hip-distance apart. Check your posture—roll your shoulders back, engage your core, and look straight ahead.
Raise your arms simultaneously just a couple inches out to each side and pause. This momentary pause should help ensure you disengage your trapezius muscle from the movement, targeting the deltoids as intended.
Lift the dumbbells up and out to each side, keeping your arms almost completely straight, stopping when your elbows reach shoulder-height and your body is forming a "T" shape. Breathe in as you lift.
Pause and hold for a second at the top of the movement.
Lower the weights slowly (take about twice as long to lower the weights as you took to lift them), bringing your arms back to your sides. Breathe out as you lower the dumbbells</string>
</resources>