<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/FontStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Exercise_Fragment">



    <Button
        android:id="@+id/chest_button"
        style="@style/Button"
        android:text="@string/chest_button" />

    <Button
        android:id="@+id/back_button"
        android:text="@string/back_button"
        style="@style/Button" />
    <Button
        style="@style/Button"
        android:id="@+id/Arms"
        android:text="@string/arms_button"/>
    <Button
        style="@style/Button"
        android:id="@+id/legs_button"
        android:text="@string/legs_button"/>
    <Button
        style="@style/Button"
        android:id="@+id/shoulder_button"
        android:text="@string/shoulder_button"/>
    <Button
       style="@style/Button"
        android:id="@+id/abs_button"
        android:text="@string/abs_button"/>
</LinearLayout>